2025-09-20T01:27:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17873453687 # 1233
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-20
* notice: last 14d: unq all: 53 89
* notice: prev accum: outdated-unq outdated-all / unq all: 4732 9610 / 4802 9697
* notice: next accum: outdated-unq outdated-all / unq all: 4732 9610 / 4804 9700
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -1 -1 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2025-09-06 2025-09-19]

2025-09-19T12:41:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17858596506 # 1232
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-19
* notice: last 14d: unq all: 52 87
* notice: prev accum: outdated-unq outdated-all / unq all: 4732 9610 / 4801 9696
* notice: next accum: outdated-unq outdated-all / unq all: 4732 9610 / 4802 9697
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-19]

2025-09-19T01:39:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17845959465 # 1231
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-19
* notice: last 14d: unq all: 52 86
* notice: prev accum: outdated-unq outdated-all / unq all: 4731 9609 / 4801 9695
* notice: next accum: outdated-unq outdated-all / unq all: 4732 9610 / 4801 9696
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +12 +17 -0 -0 / 12 17
* notice: removed / changed dates: [2025-09-05] / [2025-09-18]

2025-09-18T12:41:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17828988928 # 1230