@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-08T01:43:26Z",
-  "count" : 4,
-  "count_minmax" : [ 3, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 4,
-  "uniques_minmax" : [ 3, 4 ],
-  "uniques_decinc" : [ -0, +4 ]
+  "timestamp" : "2025-09-21T01:46:06Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 4 ],
+  "count_decinc" : [ -2, +4 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 4 ],
+  "uniques_decinc" : [ -2, +4 ]
 }
