@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-09-20T01:27:27Z",
-  "count_outdated" : 9610,
-  "uniques_outdated" : 4732,
-  "count" : 9700,
-  "uniques" : 4804,
+  "timestamp" : "2025-09-21T01:46:06Z",
+  "count_outdated" : 9612,
+  "uniques_outdated" : 4734,
+  "count" : 9709,
+  "uniques" : 4812,
   "clones" : [
     {
-      "timestamp": "2025-09-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2025-09-07T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 3, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 4,
-      "uniques_minmax": [ 3, 4 ],
-      "uniques_decinc": [ 0, 4 ]
+      "count": 2,
+      "count_minmax": [ 2, 4 ],
+      "count_decinc": [ 2, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 4 ],
+      "uniques_decinc": [ 2, 4 ]
     },
     {
       "timestamp": "2025-09-08T00:00:00Z",
@@ -130,6 +121,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-09-20T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 9, 9 ],
+      "count_decinc": [ 0, 9 ],
+      "uniques": 8,
+      "uniques_minmax": [ 8, 8 ],
+      "uniques_decinc": [ 0, 8 ]
     }
   ]
 }
