@@ -1,16 +1,11 @@
 {
-  "count": 89,
-  "uniques": 53,
+  "count": 95,
+  "uniques": 58,
   "clones": [
     {
-      "timestamp": "2025-09-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-09-07T00:00:00Z",
-      "count": 4,
-      "uniques": 4
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2025-09-08T00:00:00Z",
@@ -71,6 +66,11 @@
       "timestamp": "2025-09-19T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-09-20T00:00:00Z",
+      "count": 9,
+      "uniques": 8
     }
   ]
 }
